--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit
-ultralytics
-opencv-python-headless
-Pillow
+streamlit>=1.28.0,<2.0.0
+ultralytics>=8.0.0,<9.0.0
+opencv-python-headless>=4.8.0,<5.0.0
+Pillow>=9.5.0,<11.0.0
+numpy>=1.21.0,<2.0.0
+psutil>=5.8.0,<6.0.0
